--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             </div>
             <div id="Attacker-ships"></div>
             <button onclick="addShip('Attacker')">Add</button>
-            <button onclick="duplicateShip('Attacker')">Duplicate</button>
             <button onclick="deleteShip('Attacker')">Delete</button>
         </div>
         <div class="fleet" id="Defender">
@@ -67,7 +66,6 @@
             </div>
             <div id="Defender-ships"></div>
             <button onclick="addShip('Defender')">Add</button>
-            <button onclick="duplicateShip('Defender')">Duplicate</button>
             <button onclick="deleteShip('Attacker')">Delete</button>
         </div>
     </div>
@@ -87,7 +85,7 @@
     <script>
         let shipCount = { Attacker: 0, Defender: 0 };
 
-        function addShip(fleetId) {
+        function addShip(fleetId, ) {
             if (shipCount[fleetId] < 20) {
                 const shipForm = `
                     <div>
@@ -111,15 +109,6 @@
             } else {
                 alert("You can only add up to 20 ships per fleet.");
             }
-        }
-
-        function duplicateShip(fleetId) {
-            const fleetDiv = document.getElementById(`${fleetId}-ships`);
-            const shipDivs = fleetDiv.querySelectorAll('div');
-            const lastShipDiv = shipDivs[shipDivs.length - 1];
-            const shipForm = lastShipDiv.outerHTML;
-            fleetDiv.insertAdjacentHTML('beforeend', shipForm);
-            shipCount[fleetId]++;
         }
 
         function deleteShip(fleetId) {
