--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div id="Defender-ships"></div>
             <button onclick="addShip('Defender')">Add</button>
-            <button onclick="deleteShip('Attacker')">Delete</button>
+            <button onclick="deleteShip('Defender')">Delete</button>
         </div>
     </div>
 
